# pino

./: .gitignore  LICENSE  README.md  pyproject.toml
example/: blink.py  config.yml  proto.ino  servo.py
pino/: config.py  ino.py
pino/mlt/: pipeline.py
pino/ui/: clap.py
tests/: test_pino.py
